unpackaged/main/default/objects/Check_Deposit__c/Check_Deposit__c.object-meta.xml
<CustomObject>
    <label>Check Deposit</label>
    <nameField>
        <displayFormat>CD-{0000000}</displayFormat>
        <label>Check Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>