unpackaged/main/default/objects/Check_Deposit__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>Check</label>
    <referenceTo>Check_Log__c</referenceTo>
    <relationshipLabel>Check Deposits</relationshipLabel>
    <relationshipName>Check_Deposits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>