unpackaged/main/default/objects/Check_Deposit__c/fields/Employer_Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contribution_Amount__c</fullName>
    <label>Employer Contribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>